--- a/index.html
+++ b/index.html
@@ -1,226 +1,237 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>IndiTube</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>IndiTube with Ads</title>
   <style>
-    body { font-family: Arial, sans-serif; background-color: #f2f2f2; margin: 0; }
-    nav { background-color: #2c3e50; display: flex; justify-content: space-around; padding: 10px; }
-    nav a { color: white; text-decoration: none; font-weight: bold; cursor: pointer; }
-    header { background: #e91e63; color: white; padding: 10px; font-size: 24px; text-align: center; font-weight: bold; }
+    body { font-family: Arial, sans-serif; margin: 0; background: #f2f2f2; }
+    nav { background: #2c3e50; padding: 10px; display: flex; justify-content: space-around; }
+    nav a { color: white; font-weight: bold; cursor: pointer; text-decoration: none; }
+    header { background: #e91e63; color: white; padding: 10px; text-align: center; font-size: 24px; font-weight: bold; }
     .container { padding: 20px; }
     .hidden { display: none; }
-    .video-card { background: white; padding: 15px; margin-bottom: 15px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-    .video-controls { display: flex; gap: 10px; flex-wrap: wrap; margin-top: 10px; }
-    .video-controls button { padding: 6px 12px; border-radius: 50px; border: none; cursor: pointer; font-weight: bold; transition: 0.3s; }
-    .video-controls button:hover { opacity: 0.9; }
-    .talkies { margin-top: 10px; }
-    .talkies input { width: 70%; padding: 5px; border-radius: 5px; border: 1px solid #ccc; }
-    .talkies button { padding: 6px 10px; border-radius: 5px; border: none; background: #2196f3; color: white; }
-    .channel-img { width: 40px; height: 40px; border-radius: 50%; object-fit: cover; margin-right: 10px; }
-    .channel-info { display: flex; align-items: center; margin-top: 10px; }
+    .video-card { background: white; padding: 15px; border-radius: 10px; margin-bottom: 20px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+    .channel-info { display: flex; align-items: center; margin-bottom: 10px; }
+    .channel-img { width: 40px; height: 40px; border-radius: 50%; margin-right: 10px; }
     .earn-timer { font-size: 14px; color: green; margin-top: 5px; }
-    .connect-btn { background: #ffeb3b; color: black; font-weight: bold; border: none; border-radius: 50px; padding: 6px 12px; }
+    .video-controls { display: flex; gap: 10px; flex-wrap: wrap; margin-top: 10px; }
+    .video-controls button { border-radius: 50px; padding: 6px 12px; font-weight: bold; border: none; cursor: pointer; }
+    .connect-btn { background: #ffeb3b; }
     .connect-btn.connected { background: #4caf50; color: white; }
+    .talkies input { width: 70%; padding: 6px; margin-top: 10px; }
+    .talkies button { padding: 6px 10px; background: #2196f3; color: white; border: none; margin-left: 5px; }
   </style>
 </head>
 <body>
-  <header>IndiTube</header>
-  <nav>
-    <a onclick="showPage('gallery')">Gallery</a>
-    <a onclick="showPage('upload')">Upload</a>
-    <a onclick="showPage('dashboard')">Dashboard</a>
-    <a onclick="showPage('withdraw')">Withdraw</a>
-  </nav>
-  <div class="container">
-    <div id="login">
-      <h2>Login</h2>
-      <input type="text" id="username" placeholder="Name" /><br /><br />
-      <input type="password" id="password" placeholder="Password" /><br /><br />
-      <button onclick="loginUser()">Login</button>
-    </div><div id="gallery" class="hidden">
-  <h2>Public Gallery</h2>
-  <div id="video-list"></div>
+
+<header>IndiTube</header>
+<nav>
+  <a onclick="showPage('gallery')">Gallery</a>
+  <a onclick="showPage('upload')">Upload</a>
+  <a onclick="showPage('dashboard')">Dashboard</a>
+  <a onclick="showPage('withdraw')">Withdraw</a>
+</nav>
+
+<div class="container">
+  <div id="gallery" class="hidden">
+    <h2>Public Gallery</h2>
+    <div id="video-list"></div>
+  </div>
+
+  <div id="upload" class="hidden">
+    <h2>Upload Video</h2>
+    <input type="text" id="channelName" placeholder="Channel Name" /><br/><br/>
+    <input type="file" id="channelImage" /><br/><br/>
+    <input type="text" id="videoTitleInput" placeholder="Video Title" /><br/><br/>
+    <button onclick="openWidget()">Upload Video</button>
+  </div>
+
+  <div id="dashboard" class="hidden">
+    <h2>Your Dashboard</h2>
+    <div id="dashboard-list"></div>
+  </div>
+
+  <div id="withdraw" class="hidden">
+    <h2>Withdraw Earnings</h2>
+    <input type="text" placeholder="Your Name"/><br/><br/>
+    <input type="text" placeholder="UPI ID"/><br/><br/>
+    <button onclick="alert('Your payment will be sent in a few hours.')">Submit</button>
+  </div>
 </div>
 
-<div id="upload" class="hidden">
-  <h2>Upload Video</h2>
-  <input type="text" id="channelName" placeholder="Channel Name" /><br /><br />
-  <input type="file" id="channelImage" /><br /><br />
-  <input type="text" id="videoTitleInput" placeholder="Video Title" /><br /><br />
-  <button onclick="openWidget()">Upload Video</button>
-</div>
+<script src="https://widget.cloudinary.com/v2.0/global/all.js"></script>
+<script>
+  const CLOUD_NAME = "dtlbk3ncz";
+  const UPLOAD_PRESET = "Inditube";
+  const uploadedVideos = [];
+  const connectedChannels = {};
 
-<div id="dashboard" class="hidden">
-  <h2>Your Dashboard</h2>
-  <div id="dashboard-list"></div>
-</div>
+  function showPage(page) {
+    ['gallery', 'upload', 'dashboard', 'withdraw'].forEach(id => {
+      document.getElementById(id).classList.add('hidden');
+    });
+    document.getElementById(page).classList.remove('hidden');
+    if (page === 'dashboard') renderDashboard();
+  }
 
-<div id="withdraw" class="hidden">
-  <h2>Withdraw Earnings</h2>
-  <input type="text" placeholder="Your Name" /><br /><br />
-  <input type="text" placeholder="UPI ID" /><br /><br />
-  <button onclick="alert('Your payment will be sent to your account in a few hours.')">Submit</button>
-</div>
+  function openWidget() {
+    const channelName = document.getElementById("channelName").value;
+    const videoTitle = document.getElementById("videoTitleInput").value;
+    const channelImage = document.getElementById("channelImage").files[0];
 
-  </div>  <script src="https://widget.cloudinary.com/v2.0/global/all.js"></script>  <script>
-    const CLOUD_NAME = "dtlbk3ncz";
-    const UPLOAD_PRESET = "Inditube";
-    const uploadedVideos = [];
-    const connectedChannels = {};
-
-    function showPage(page) {
-      ['gallery', 'upload', 'dashboard', 'withdraw'].forEach(id => {
-        document.getElementById(id).classList.add('hidden');
-      });
-      document.getElementById(page).classList.remove('hidden');
-      if (page === 'dashboard') renderDashboard();
+    if (!channelName || !channelImage || !videoTitle) {
+      alert("Please enter all details.");
+      return;
     }
 
-    function loginUser() {
-      const name = document.getElementById("username").value;
-      const pass = document.getElementById("password").value;
-      if (name && pass) {
-        localStorage.setItem("loggedIn", name);
-        document.getElementById("login").classList.add("hidden");
-        showPage("gallery");
-      } else {
-        alert("Please enter valid credentials");
-      }
-    }
+    const reader = new FileReader();
+    reader.onload = () => {
+      const imageUrl = reader.result;
 
-    function openWidget() {
-      const channelName = document.getElementById("channelName").value;
-      const videoTitle = document.getElementById("videoTitleInput").value;
-      const channelImage = document.getElementById("channelImage").files[0];
-
-      if (!channelName || !channelImage || !videoTitle) {
-        alert("Please provide channel name, video title and image");
-        return;
-      }
-
-      const reader = new FileReader();
-      reader.onload = () => {
-        const imageUrl = reader.result;
-
-        cloudinary.openUploadWidget({
-          cloudName: CLOUD_NAME,
-          uploadPreset: UPLOAD_PRESET,
-          sources: ["local"],
-          multiple: false,
-          resourceType: "video"
-        }, (error, result) => {
-          if (!error && result && result.event === "success") {
-            const videoUrl = result.info.secure_url;
-            const uploader = localStorage.getItem("loggedIn") || "Guest";
-            const videoObj = { videoUrl, videoTitle, channelName, channelImageUrl: imageUrl, uploader };
-            uploadedVideos.push(videoObj);
-            renderGallery();
-            renderDashboard();
-            alert("Video uploaded successfully!");
-          }
-        });
-      };
-      reader.readAsDataURL(channelImage);
-    }
-
-    function renderGallery() {
-      const list = document.getElementById("video-list");
-      list.innerHTML = '';
-      uploadedVideos.forEach((v, index) => {
-        list.appendChild(createVideoCard(v, index));
-      });
-    }
-
-    function renderDashboard() {
-      const list = document.getElementById("dashboard-list");
-      list.innerHTML = '';
-      uploadedVideos.forEach((v, index) => {
-        if (v.uploader === localStorage.getItem("loggedIn")) {
-          list.appendChild(createVideoCard(v, index));
+      cloudinary.openUploadWidget({
+        cloudName: CLOUD_NAME,
+        uploadPreset: UPLOAD_PRESET,
+        sources: ["local"],
+        multiple: false,
+        resourceType: "video"
+      }, (error, result) => {
+        if (!error && result && result.event === "success") {
+          const videoUrl = result.info.secure_url;
+          const uploader = localStorage.getItem("loggedIn") || "Guest";
+          const videoObj = { videoUrl, videoTitle, channelName, channelImageUrl: imageUrl, uploader };
+          uploadedVideos.push(videoObj);
+          renderGallery();
+          renderDashboard();
+          alert("Video uploaded!");
         }
       });
-    }
-
-    function createVideoCard(v, index) {
-      const card = document.createElement("div");
-      card.className = "video-card";
-      const timerId = `timer-${index}`;
-      const connectorId = `connect-${index}`;
-      card.innerHTML = `
-        <div class="channel-info">
-          <img src="${v.channelImageUrl}" class="channel-img" alt="Channel Image" />
-          <b>${v.channelName}</b>
-        </div>
-        <h4>${v.videoTitle}</h4>
-        <video src="${v.videoUrl}" controls width="100%" onplay="startEarning('${timerId}')"></video>
-        <div class="earn-timer" id="${timerId}">Earnings: ₹0</div>
-        <div class="video-controls">
-          <button style="background:#2196f3;color:white;" onclick="likeVideo(this)">👍 Like (<span>0</span>)</button>
-          <button style="background:#f44336;color:white;" onclick="dislikeVideo(this)">👎 Dislike (<span>0</span>)</button>
-          <button style="background:#9c27b0;color:white;" onclick="shareVideo('${v.videoUrl}')">🔗 Share</button>
-          <button class="connect-btn" id="${connectorId}" onclick="connectChannel('${connectorId}')">⚡ Connect (0)</button>
-        </div>
-        <div class="talkies">
-          <input type="text" placeholder="Talkies (Comment here)" />
-          <button onclick="postComment(this)">Post</button>
-        </div>
-      `;
-      return card;
-    }
-
-    function likeVideo(btn) {
-      let span = btn.querySelector("span");
-      span.innerText = parseInt(span.innerText) + 1;
-    }
-
-    function dislikeVideo(btn) {
-      let span = btn.querySelector("span");
-      span.innerText = parseInt(span.innerText) + 1;
-    }
-
-    function shareVideo(url) {
-      navigator.clipboard.writeText(url);
-      alert("Video link copied!");
-    }
-
-    function connectChannel(id) {
-      if (!connectedChannels[id]) connectedChannels[id] = 0;
-      connectedChannels[id]++;
-      const btn = document.getElementById(id);
-      btn.innerText = `✅ Connected (${connectedChannels[id]})`;
-      btn.classList.add("connected");
-      btn.disabled = true;
-      const audio = new Audio("https://www.soundjay.com/button/beep-07.wav");
-      audio.play();
-    }
-
-    function postComment(btn) {
-      const input = btn.previousElementSibling;
-      if (input.value.trim()) {
-        alert("Comment: " + input.value);
-        input.value = "";
-      }
-    }
-
-    function startEarning(timerId) {
-      const div = document.getElementById(timerId);
-      if (!div.dataset.started) {
-        div.dataset.started = true;
-        let earning = 0;
-        setInterval(() => {
-          earning += 5;
-          div.innerText = `Earnings: ₹${earning}`;
-        }, 30000);
-      }
-    }
-
-    window.onload = () => {
-      const loggedIn = localStorage.getItem("loggedIn");
-      if (loggedIn) {
-        document.getElementById("login").classList.add("hidden");
-        showPage("gallery");
-      }
     };
-  </script></body>
+    reader.readAsDataURL(channelImage);
+  }
+
+  function renderGallery() {
+    const list = document.getElementById("video-list");
+    list.innerHTML = '';
+    uploadedVideos.forEach((v, index) => {
+      list.appendChild(createVideoCard(v, index));
+    });
+  }
+
+  function renderDashboard() {
+    const list = document.getElementById("dashboard-list");
+    list.innerHTML = '';
+    uploadedVideos.forEach((v, index) => {
+      if (v.uploader === localStorage.getItem("loggedIn")) {
+        list.appendChild(createVideoCard(v, index));
+      }
+    });
+  }
+
+  function createVideoCard(v, index) {
+    const card = document.createElement("div");
+    card.className = "video-card";
+    const videoId = `video-${index}`;
+    const adId = `ad-${index}`;
+    const timerId = `timer-${index}`;
+    const connectorId = `connect-${index}`;
+
+    card.innerHTML = `
+      <div class="channel-info">
+        <img src="${v.channelImageUrl}" class="channel-img" alt="Channel Image" />
+        <b>${v.channelName}</b>
+      </div>
+      <h4>${v.videoTitle}</h4>
+      <video id="${adId}" width="100%" controls>
+        <source src="ad_video.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+      <video id="${videoId}" width="100%" class="hidden" controls>
+        <source src="${v.videoUrl}" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+      <div class="earn-timer" id="${timerId}">Earnings: ₹0</div>
+      <div class="video-controls">
+        <button onclick="likeVideo(this)" style="background:#2196f3;color:white;">👍 Like (<span>0</span>)</button>
+        <button onclick="dislikeVideo(this)" style="background:#f44336;color:white;">👎 Dislike (<span>0</span>)</button>
+        <button onclick="shareVideo('${v.videoUrl}')" style="background:#9c27b0;color:white;">🔗 Share</button>
+        <button id="${connectorId}" class="connect-btn" onclick="connectChannel('${connectorId}')">⚡ Connect (0)</button>
+      </div>
+      <div class="talkies">
+        <input type="text" placeholder="Talkies (Comment here)" />
+        <button onclick="postComment(this)">Post</button>
+      </div>
+    `;
+
+    // Add logic for pre-roll transition
+    setTimeout(() => {
+      const adPlayer = card.querySelector(`#${adId}`);
+      const mainPlayer = card.querySelector(`#${videoId}`);
+      adPlayer.onended = () => {
+        adPlayer.classList.add("hidden");
+        mainPlayer.classList.remove("hidden");
+        mainPlayer.play();
+        startEarning(timerId);
+      };
+    }, 0);
+
+    return card;
+  }
+
+  function likeVideo(btn) {
+    let span = btn.querySelector("span");
+    span.innerText = parseInt(span.innerText) + 1;
+  }
+
+  function dislikeVideo(btn) {
+    let span = btn.querySelector("span");
+    span.innerText = parseInt(span.innerText) + 1;
+  }
+
+  function shareVideo(url) {
+    navigator.clipboard.writeText(url);
+    alert("Video link copied!");
+  }
+
+  function connectChannel(id) {
+    if (!connectedChannels[id]) connectedChannels[id] = 0;
+    connectedChannels[id]++;
+    const btn = document.getElementById(id);
+    btn.innerText = `✅ Connected (${connectedChannels[id]})`;
+    btn.classList.add("connected");
+    btn.disabled = true;
+    const audio = new Audio("https://www.soundjay.com/button/beep-07.wav");
+    audio.play();
+  }
+
+  function postComment(btn) {
+    const input = btn.previousElementSibling;
+    if (input.value.trim()) {
+      alert("Comment: " + input.value);
+      input.value = "";
+    }
+  }
+
+  function startEarning(timerId) {
+    const div = document.getElementById(timerId);
+    if (!div.dataset.started) {
+      div.dataset.started = true;
+      let earning = 0;
+      setInterval(() => {
+        earning += 5;
+        div.innerText = `Earnings: ₹${earning}`;
+      }, 30000);
+    }
+  }
+
+  window.onload = () => {
+    const loggedIn = localStorage.getItem("loggedIn");
+    if (loggedIn) {
+      document.getElementById("login").classList.add("hidden");
+      showPage("gallery");
+    }
+  };
+</script>
+
+</body>
 </html>
