--- a/index.html
+++ b/index.html
@@ -5,29 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>IndiTube</title>
   <style>
-    body { font-family: Arial, sans-serif; background-color: #f2f2f2; margin: 0; }
-    nav { background-color: #2c3e50; display: flex; justify-content: space-around; padding: 10px; }
+    body { font-family: Arial; margin: 0; background: #f2f2f2; }
+    header { background: #e91e63; color: #fff; padding: 10px; font-size: 24px; text-align: center; font-weight: bold; }
+    nav { background: #2c3e50; display: flex; justify-content: space-around; padding: 10px; }
     nav a { color: white; text-decoration: none; font-weight: bold; cursor: pointer; }
-    header { background: #e91e63; color: white; padding: 10px; font-size: 24px; text-align: center; font-weight: bold; }
     .container { padding: 20px; }
     .hidden { display: none; }
-    .video-card { background: white; padding: 15px; margin-bottom: 15px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-    .video-controls { display: flex; gap: 10px; flex-wrap: wrap; margin-top: 10px; }
-    .video-controls button { padding: 6px 12px; border-radius: 50px; border: none; cursor: pointer; font-weight: bold; transition: 0.3s; }
-    .video-controls button:hover { opacity: 0.9; }
-    .talkies { margin-top: 10px; }
+    .video-card { background: #fff; padding: 15px; margin-bottom: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+    .channel-img { width: 40px; height: 40px; border-radius: 50%; margin-right: 10px; object-fit: cover; }
+    .channel-info { display: flex; align-items: center; }
+    .video-controls button { padding: 6px 12px; border-radius: 50px; border: none; font-weight: bold; margin: 5px 5px 0 0; cursor: pointer; }
+    .connect-btn { background: #ffeb3b; }
+    .connect-btn.connected { background: #4caf50; color: #fff; }
     .talkies input { width: 70%; padding: 5px; border-radius: 5px; border: 1px solid #ccc; }
-    .talkies button { padding: 6px 10px; border-radius: 5px; border: none; background: #2196f3; color: white; }
-    .channel-img { width: 40px; height: 40px; border-radius: 50%; object-fit: cover; margin-right: 10px; }
-    .channel-info { display: flex; align-items: center; margin-top: 10px; }
+    .talkies button { padding: 6px 10px; border: none; background: #2196f3; color: white; border-radius: 5px; }
     .earn-timer { font-size: 14px; color: green; margin-top: 5px; }
-    .connect-btn { background: #ffeb3b; color: black; font-weight: bold; border: none; border-radius: 50px; padding: 6px 12px; }
-    .connect-btn.connected { background: #4caf50; color: white; }
+    #skipBtn { display: none; margin: 10px 0; background: red; color: white; border: none; padding: 6px 12px; cursor: pointer; border-radius: 5px; }
   </style>
 </head>
 <body>
   <header>IndiTube</header>
-  <nav id="main-nav" class="hidden">
+  <nav>
     <a onclick="showPage('gallery')">Gallery</a>
     <a onclick="showPage('upload')">Upload</a>
     <a onclick="showPage('dashboard')">Dashboard</a>
@@ -38,8 +36,8 @@
   <div class="container">
     <div id="login">
       <h2>Login</h2>
-      <input type="text" id="username" placeholder="Name" /><br /><br />
-      <input type="password" id="password" placeholder="Password" /><br /><br />
+      <input type="text" id="username" placeholder="Name"/><br><br>
+      <input type="password" id="password" placeholder="Password"/><br><br>
       <button onclick="loginUser()">Login</button>
     </div>
 
@@ -50,9 +48,9 @@
 
     <div id="upload" class="hidden">
       <h2>Upload Video</h2>
-      <input type="text" id="channelName" placeholder="Channel Name" /><br /><br />
-      <input type="file" id="channelImage" /><br /><br />
-      <input type="text" id="videoTitleInput" placeholder="Video Title" /><br /><br />
+      <input type="text" id="channelName" placeholder="Channel Name"/><br><br>
+      <input type="file" id="channelImage"/><br><br>
+      <input type="text" id="videoTitleInput" placeholder="Video Title"/><br><br>
       <button onclick="openWidget()">Upload Video</button>
     </div>
 
@@ -63,8 +61,8 @@
 
     <div id="withdraw" class="hidden">
       <h2>Withdraw Earnings</h2>
-      <input type="text" placeholder="Your Name" /><br /><br />
-      <input type="text" placeholder="UPI ID" /><br /><br />
+      <input type="text" placeholder="Your Name"/><br><br>
+      <input type="text" placeholder="UPI ID"/><br><br>
       <button onclick="alert('Your payment will be sent to your account in a few hours.')">Submit</button>
     </div>
   </div>
@@ -73,24 +71,21 @@
   <script>
     const CLOUD_NAME = "dtlbk3ncz";
     const UPLOAD_PRESET = "Inditube";
+    const PRE_ROLL_AD = `https://player.cloudinary.com/embed/?cloud_name=dtlbk3ncz&public_id=xhcpjdgvyyulacph6vn0&profile=cld-default`;
     const uploadedVideos = [];
-    const connectedChannels = {};
 
-    function showPage(page) {
-      ['gallery', 'upload', 'dashboard', 'withdraw'].forEach(id => {
-        document.getElementById(id).classList.add('hidden');
-      });
-      document.getElementById(page).classList.remove('hidden');
-      if (page === 'dashboard') renderDashboard();
+    function showPage(id) {
+      ['gallery','upload','dashboard','withdraw'].forEach(p => document.getElementById(p).classList.add('hidden'));
+      document.getElementById(id).classList.remove('hidden');
+      if (id === "dashboard") renderDashboard();
     }
 
     function loginUser() {
-      const name = document.getElementById("username").value.trim();
-      const pass = document.getElementById("password").value.trim();
+      const name = document.getElementById("username").value;
+      const pass = document.getElementById("password").value;
       if (name && pass) {
         localStorage.setItem("loggedIn", name);
         document.getElementById("login").classList.add("hidden");
-        document.getElementById("main-nav").classList.remove("hidden");
         showPage("gallery");
       } else {
         alert("Please enter valid credentials");
@@ -106,9 +101,8 @@
       const channelName = document.getElementById("channelName").value;
       const videoTitle = document.getElementById("videoTitleInput").value;
       const channelImage = document.getElementById("channelImage").files[0];
-
-      if (!channelName || !channelImage || !videoTitle) {
-        alert("Please provide channel name, video title and image");
+      if (!channelName || !videoTitle || !channelImage) {
+        alert("Please fill all fields");
         return;
       }
 
@@ -120,17 +114,14 @@
           cloudName: CLOUD_NAME,
           uploadPreset: UPLOAD_PRESET,
           sources: ["local"],
-          multiple: false,
           resourceType: "video"
-        }, (error, result) => {
-          if (!error && result && result.event === "success") {
-            const videoUrl = result.info.secure_url;
+        }, (err, res) => {
+          if (!err && res.event === "success") {
+            const videoUrl = res.info.secure_url;
             const uploader = localStorage.getItem("loggedIn") || "Guest";
-            const videoObj = { videoUrl, videoTitle, channelName, channelImageUrl: imageUrl, uploader };
-            uploadedVideos.push(videoObj);
+            uploadedVideos.push({ channelName, videoTitle, channelImageUrl: imageUrl, videoUrl, uploader });
             renderGallery();
             renderDashboard();
-            alert("Video uploaded successfully!");
           }
         });
       };
@@ -140,17 +131,15 @@
     function renderGallery() {
       const list = document.getElementById("video-list");
       list.innerHTML = '';
-      uploadedVideos.forEach((v, index) => {
-        list.appendChild(createVideoCard(v, index));
-      });
+      uploadedVideos.forEach((v, i) => list.appendChild(createVideoCard(v, i)));
     }
 
     function renderDashboard() {
       const list = document.getElementById("dashboard-list");
       list.innerHTML = '';
-      uploadedVideos.forEach((v, index) => {
+      uploadedVideos.forEach((v, i) => {
         if (v.uploader === localStorage.getItem("loggedIn")) {
-          list.appendChild(createVideoCard(v, index));
+          list.appendChild(createVideoCard(v, i));
         }
       });
     }
@@ -158,45 +147,59 @@
     function createVideoCard(v, index) {
       const card = document.createElement("div");
       card.className = "video-card";
-      const timerId = `timer-${index}`;
-      const connectorId = `connect-${index}`;
+      const timerId = `earn-${index}`;
+      const adId = `ad-${index}`;
+      const videoId = `video-${index}`;
+      const skipId = `skip-${index}`;
+
       card.innerHTML = `
         <div class="channel-info">
-          <img src="${v.channelImageUrl}" class="channel-img" alt="Channel Image" />
+          <img src="${v.channelImageUrl}" class="channel-img" />
           <b>${v.channelName}</b>
         </div>
         <h4>${v.videoTitle}</h4>
-        <iframe
-          src="https://player.cloudinary.com/embed/?cloud_name=dtlbk3ncz&public_id=xhcpjdgvyyulacph6vn0&profile=cld-default"
-          width="100%" height="200"
-          style="aspect-ratio: 16/9; margin-bottom:10px;"
-          allow="autoplay; fullscreen; encrypted-media"
-          allowfullscreen frameborder="0">
-        </iframe>
-        <video src="${v.videoUrl}" controls width="100%" onplay="startEarning('${timerId}')"></video>
+        <iframe id="${adId}" src="${PRE_ROLL_AD}" width="100%" height="220" style="border:none;" allow="autoplay; fullscreen"></iframe>
+        <button id="${skipId}" onclick="skipAd('${adId}', '${videoId}', '${skipId}', '${timerId}')" style="display:none;">Skip Ad</button>
+        <video id="${videoId}" src="${v.videoUrl}" controls width="100%" style="display:none;" onplay="startEarning('${timerId}')"></video>
         <div class="earn-timer" id="${timerId}">Earnings: ₹0</div>
         <div class="video-controls">
-          <button style="background:#2196f3;color:white;" onclick="likeVideo(this)">👍 Like (<span>0</span>)</button>
-          <button style="background:#f44336;color:white;" onclick="dislikeVideo(this)">👎 Dislike (<span>0</span>)</button>
-          <button style="background:#9c27b0;color:white;" onclick="shareVideo('${v.videoUrl}')">🔗 Share</button>
-          <button class="connect-btn" id="${connectorId}" onclick="connectChannel('${connectorId}')">⚡ Connect (0)</button>
+          <button onclick="likeVideo(this)" style="background:#2196f3;color:#fff;">👍 Like (<span>0</span>)</button>
+          <button onclick="dislikeVideo(this)" style="background:#f44336;color:#fff;">👎 Dislike (<span>0</span>)</button>
+          <button onclick="shareVideo('${v.videoUrl}')" style="background:#9c27b0;color:#fff;">🔗 Share</button>
+          <button class="connect-btn" onclick="connectChannel(this)">⚡ Connect (0)</button>
         </div>
         <div class="talkies">
           <input type="text" placeholder="Talkies (Comment here)" />
           <button onclick="postComment(this)">Post</button>
         </div>
       `;
+
+      // Show Skip Ad button after 5 seconds
+      setTimeout(() => {
+        const skipBtn = document.getElementById(skipId);
+        if (skipBtn) skipBtn.style.display = 'block';
+      }, 5000);
+
       return card;
+    }
+
+    function skipAd(adId, vidId, skipId, timerId) {
+      document.getElementById(adId).style.display = 'none';
+      document.getElementById(skipId).style.display = 'none';
+      const vid = document.getElementById(vidId);
+      vid.style.display = 'block';
+      vid.play();
+      startEarning(timerId);
     }
 
     function likeVideo(btn) {
       let span = btn.querySelector("span");
-      span.innerText = parseInt(span.innerText) + 1;
+      span.innerText = +span.innerText + 1;
     }
 
     function dislikeVideo(btn) {
       let span = btn.querySelector("span");
-      span.innerText = parseInt(span.innerText) + 1;
+      span.innerText = +span.innerText + 1;
     }
 
     function shareVideo(url) {
@@ -204,15 +207,14 @@
       alert("Video link copied!");
     }
 
-    function connectChannel(id) {
-      if (!connectedChannels[id]) connectedChannels[id] = 0;
-      connectedChannels[id]++;
-      const btn = document.getElementById(id);
-      btn.innerText = `✅ Connected (${connectedChannels[id]})`;
-      btn.classList.add("connected");
-      btn.disabled = true;
-      const audio = new Audio("https://www.soundjay.com/button/beep-07.wav");
-      audio.play();
+    function connectChannel(btn) {
+      if (!btn.clicked) {
+        btn.clicked = true;
+        let count = +btn.innerText.match(/\d+/)[0] + 1;
+        btn.innerText = `✅ Connected (${count})`;
+        btn.classList.add("connected");
+        new Audio("https://www.soundjay.com/button/beep-07.wav").play();
+      }
     }
 
     function postComment(btn) {
@@ -236,10 +238,8 @@
     }
 
     window.onload = () => {
-      const loggedIn = localStorage.getItem("loggedIn");
-      if (loggedIn) {
+      if (localStorage.getItem("loggedIn")) {
         document.getElementById("login").classList.add("hidden");
-        document.getElementById("main-nav").classList.remove("hidden");
         showPage("gallery");
       }
     };
